name: calculator
version: 0
author: Name Surname
maintainer: name.surname@domain.tld
category: Whatever
build-type: Simple
cabal-version: >= 1.10


executable Calculator
  hs-source-dirs:
    .
  main-is: Calculator.hs
  other-modules:
    Expr
    Parsing
    ThreepennyPages
  build-depends:
    base,
    threepenny-gui,
    QuickCheck,
    aeson
  default-language: Haskell2010
